--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # test file
 test/*
 test*
+dataModel.json
 
 # package
 node_modules/*
@@ -9,6 +10,7 @@ package-lock.json
 # Serial number
 database/SerialNumber.txt
 database/db_data_model*
+database/db_json_view.json
 
 # log file
 log/*
